deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anuj-django-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: anujverma123/anuj-first-container
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
